--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "install": "^0.13.0",
     "next": "14.2.5",
+    "npm": "^10.8.2",
+    "re-resizable": "^6.9.17",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0"
